--- a/RedTomato.ipynb
+++ b/RedTomato.ipynb
@@ -60,7 +60,6 @@
     "from sklearn.metrics import r2_score\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "from sklearn.feature_selection import SelectKBest\n",
-    "from sklearn.grid_search import GridSearchCV\n",
     "\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -88,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -124,10 +123,10 @@
     "    return os.path.join(sales_dir, f)\n",
     "\n",
     "def is_eco(apple):\n",
-    "    return apple[-1] === 'E'\n",
+    "    return apple[-1] == 'E'\n",
     "\n",
     "def is_organic(apple):\n",
-    "    return apple[-1] === 'O'\n",
+    "    return apple[-1] == 'O'\n",
     "\n",
     "sales_files = list(filter(is_csv, os.listdir(sales_dir)))\n",
     "purchase_files = list(filter(is_csv, os.listdir(purchase_dir)))\n",
@@ -239,6 +238,44 @@
    "outputs": [],
    "source": [
     "pdata.to_csv('mcintosh.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdata['year'] = pdata['Receive Date'].map(lambda x: x.split('/')[-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_year = pdata.groupby('year')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.groupby.DataFrameGroupBy object at 0x10e901710>"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# data_year[:]"
    ]
   },
   {
